GUI: corrected the display of the left dock. Now it will always have the perfect size.
tuto: added some pictures into the tutorial.

view_delegate: I setted the size of the text to 11pt. It should correct
the 'too small font size bug' for Windows (the font size was 8).

--- a/config/styles/style.css
+++ b/config/styles/style.css
@@ -9,3 +9,8 @@ QLabel
 {
     color: white
 }
+
+QWidget
+{
+    font-size: 11pt
+}
